working django backend connecting to our postgres database setup for development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     depends_on:
       - postgres
     environment:
-      - PGDATABASE=postgres
+      - PGDATABASE=book_storage
       - PGPASSWORD=postgres_password
       - PGPORT=5432
+      - PGHOST=postgres
+      - PGUSER=postgres_user
