--- a/nginx_router/backend/Dockerfile.dev
+++ b/nginx_router/backend/Dockerfile.dev
@@ -1,10 +1,10 @@
 # base python image
-FROM python:3.5.7-alpine3.8
+FROM python:3.7.4
 
 # set working directory
 WORKDIR '/app'
 
-RUN pip3 install Django
+RUN pip3 install Django graphene_django psycopg2
 
 
 # move backend directory into root of app directory
