--- a/nginx_router/nginx_conf/default.conf
+++ b/nginx_router/nginx_conf/default.conf
@@ -34,4 +34,7 @@ server {
     location /api/v1 {
         proxy_pass http://backend;
     }
+    location /admin {
+        proxy_pass http://backend;
+    }
 }
