--- a/nginx_router/Dockerfile.dev
+++ b/nginx_router/Dockerfile.dev
@@ -12,3 +12,4 @@ FROM nginx
 # copy the nginx server configuration
 COPY ./nginx_conf/default.conf /etc/nginx/conf.d/default.conf
 COPY ./nginx_conf/nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx_conf/graphiql.js /usr/share/nginx/html/static/graphene_django/graphiql.js
