--- a/nginx_router/nginx_conf/default.conf
+++ b/nginx_router/nginx_conf/default.conf
@@ -37,4 +37,10 @@ server {
     location /admin {
         proxy_pass http://backend;
     }
+    location /graphql {
+        proxy_pass http://backend;
+    }
+    location /static/graphene_django/ {
+        root /usr/share/nginx/html;
+    }
 }
