added sql setup script to a volume mount provided to the sql container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     image: "postgres:latest"
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
+      - ./postgres_conf:/app
   frontend:
     build:
       dockerfile: Dockerfile.dev
